@@ -22,12 +22,14 @@
 #define __PHONEMGR_UTILS_H__
 
 #include <glib-object.h>
+#include <gnokii.h>
 
 G_BEGIN_DECLS
 
 char *phonemgr_utils_write_config (const char *driver, const char *addr);
 char *phonemgr_utils_guess_driver (char *device);
 void phonemgr_utils_gn_statemachine_clear (struct gn_statemachine *state);
+const char *phonemgr_utils_gn_error_to_string (gn_error error);
 
 G_END_DECLS
 
