@@ -1,3 +1,10 @@
+2005-09-10  Bastien Nocera  <hadess@hadess.net>
+
+	* libgsm/phonemgr-listener.c: (phonemgr_listener_connect):
+	* libgsm/phonemgr-utils.c:
+	* libgsm/phonemgr-utils.h: Print out which driver we are using, and
+	errors when gn_gsm_initialise fails
+
 2005-09-09  Bastien Nocera  <hadess@hadess.net>
 
 	* libgsm/Makefile.am:
